--- a/index.html
+++ b/index.html
@@ -44,5 +44,50 @@
       </div>
     </div>
   </header>
+
+  <nav class="menubar">
+    <ul>
+      <li><a href="#" class="active">Home</a></li>
+      <li><a href="#">about us <i class="fa fa-caret-down"></i></a>
+      <div class="sub-menu-one">
+        <ul>
+          <li><a href="#">link one</a></li>
+          <li><a href="#">link two</a></li>
+          <li><a href="#">link three</a></li>
+        </ul>
+      </div>
+
+      </li>
+      <li><a href="#">contact us <i class="fa fa-caret-down"></i></a>
+        <div class="sub-menu-one">
+          <ul>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
+          </ul>
+        </div>
+
+      </li>
+      <li><a href="#">blog <i class="fa fa-caret-down"></i></a>
+        <div class="sub-menu-one">
+          <ul>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
+          </ul>
+        </div>
+      </li>
+      <li><a href="#">shoping <i class="fa fa-caret-down"></i></a>
+        <div class="sub-menu-one">
+          <ul>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
+          </ul>
+        </div>
+
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
