--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <nav class="menubar">
+
     <ul>
       <li><a href="#" class="active">Home</a></li>
       <li><a href="#">about us <i class="fa fa-caret-down"></i></a>
@@ -54,5 +55,48 @@
       </li>
     </ul>
   </nav>
+
+  <div class="menubar-2">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">DropDown<i class="fa fa-caret-down"></i></a>
+        <div class="sub-menu-two">
+          <ul>
+            <h3>first</h3>
+            <li><a href="#about">about</a></li>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#">contact</a></li>
+            <li><a href="#">help</a></li>
+          </ul>
+
+          <ul>
+            <h3>second</h3>
+            <li><a href="#about">about</a></li>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#">contact</a></li>
+            <li><a href="#">help</a></li>
+          </ul>
+
+          <ul>
+            <h3>third</h3>
+            <li><a href="#about">about</a></li>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#">contact</a></li>
+            <li><a href="#">help</a></li>
+          </ul>
+
+          <ul>
+            <h3>fourth</h3>
+            <li><a href="#about">about</a></li>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#">contact</a></li>
+            <li><a href="#">help</a></li>
+          </ul>
+        </div>
+
+    </li>
+      <li><a href="#">about</a></li>
+    </ul>
+  </div>
 </body>
 </html>
