--- a/index.html
+++ b/index.html
@@ -98,5 +98,19 @@
       <li><a href="#">about</a></li>
     </ul>
   </div>
+
+  <form>
+
+    <div class="profile">
+      <a href="#"><img src="./assets/personal image.jpg" alt="profile image"></a>
+    </div>
+    <label for="fname">First Name</label>
+    <input type="text" name="firsname" id="fname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" name="lastname" id="lname" placeholder="last name..">
+
+    <input type="submit" value="submit">
+  </form>
 </body>
 </html>
