--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
     </ul>
   </div>
 
+  <div class="container">
+
+    <video autoplay loop muted plays-inline class="background-clip">
+      <source src="./assets/bgVideo.mp4" type="video/mp4">
+    </video>
+
+    <div class="content">
+      <h1>Explore More</h1>
+      <a href="#">Learn More</a>
+    </div>
+  </div>
+
+
   <form>
 
     <div class="profile">
