--- a/index.html
+++ b/index.html
@@ -34,33 +34,7 @@
 
       </li>
       <li><a href="#">blog <i class="fa fa-caret-down"></i></a>
-        <div class="sub-menu-one">
-          <ul>
-            <li><a href="#">link one</a></li>
-            <li><a href="#">link two</a></li>
-            <li><a href="#">link three</a></li>
-          </ul>
-        </div>
-      </li>
-
-      <li><a href="#">shoping <i class="fa fa-caret-down"></i></a>
-        <div class="sub-menu-one">
-          <ul>
-            <li><a href="#">link one</a></li>
-            <li><a href="#">link two</a></li>
-            <li><a href="#">link three</a></li>
-          </ul>
-        </div>
-
-      </li>
-    </ul>
-  </nav>
-
-  <div class="menubar-2">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">DropDown<i class="fa fa-caret-down"></i></a>
-        <div class="sub-menu-two">
+        <div class="sub-menu-one full-screen-drapdown">
           <ul>
             <h3>first</h3>
             <li><a href="#about">about</a></li>
@@ -92,12 +66,22 @@
             <li><a href="#">contact</a></li>
             <li><a href="#">help</a></li>
           </ul>
+
+        </div>
+      </li>
+
+      <li><a href="#">shoping <i class="fa fa-caret-down"></i></a>
+        <div class="sub-menu-one">
+          <ul>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
+          </ul>
         </div>
 
-    </li>
-      <li><a href="#">about</a></li>
+      </li>
     </ul>
-  </div>
+  </nav>
 
   <div class="container">
 
